5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1601_1800.log
== TEST (2019-03-28 00:31:18) 
-- CODE:
int(input("valor de a: "))
int(input("valor de b: "))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:33:26) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c"))
total = a**2 + b**2 + c**2
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:33:53) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = a**2 + b**2 + c**2
print(total)
-- OUTPUT:
1925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:35:16) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = a**2 + b**2 + c**2
print(total, 2)
-- OUTPUT:
1925 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:35:53) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = a**2 + b**2 + c**2
print(round(total, 2))
-- OUTPUT:
1925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:36:43) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = a**2 + b**2 + c**2 // a + b + c
print(round(total, 2))
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:37:54) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = a**2 + b**2 + c**2 // a + b + c
print(total)
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:38:23) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(total)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:39:01) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 2)
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:39:07) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 2))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:39:12) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 2))
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 00:39:36) 
-- CODE:
a= int(input("valor de a: "))
b= int(input("valor de b: "))
c= int(input("valor de c: "))
total = (a**2) + (b**2) + (c**2) // (a + b + c)
print(round(total, 2))
-- EXECUTION TIME:
0.203442
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:53:51) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
total = (a**2) + (b**2) + (c**2) // (a + b + c)
print(round(total, 2))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:54:44) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 2))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 00:54:53) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 2))
-- EXECUTION TIME:
0.201261
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:55:13) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 7))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 00:55:34) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
total = (a**2 + b**2 + c**2) // (a + b + c)
print(round(total, 7))
-- EXECUTION TIME:
0.145844
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:56:01) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(round(x, 7))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:56:22) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(x)
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:56:36) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(x)
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:57:06) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(x(round, 7)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:57:19) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(x(round, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x(round, 7))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 00:57:44) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(round(x, 7))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:34:47) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) // (a + b + c)
print(float(round(x, 7)))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:35:38) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) // (a + b + c)
print(float(round(x, 7)))
-- EXECUTION TIME:
0.24286
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:36:04) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) / (a + b + c)
print(float(round(x, 7)))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:36:18) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) / (a + b + c)
print(float(round(x, 7)))
-- EXECUTION TIME:
0.154729
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:41:50) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) / (a + b + c)
print((round(x, 7))
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:42:01) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) / (a + b + c)
print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:43:12) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) / (a + b + c)
print(float(round(x, 7)))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:43:26) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2) + (b**2) + (c**2) // (a + b + c)
print(float(round(x, 7)))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:44:04) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) / (a + b + c)
print(round(x, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:44:09) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) / (a + b + c)
print(round(x, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:45:11) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) / (a + b + c)
print(round(x, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:45:27) 
-- CODE:
a= float(input("valor de a: "))
b= float(input("valor de b: "))
c= float(input("valor de c: "))
x = (a**2 + b**2 + c**2) / (a + b + c)
print(round(x, 7))
-- EXECUTION TIME:
0.172542
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
